- 1、【升级】通讯组件升级，标准化RESTful格式通讯协议以及鉴权逻辑； - 2、【优化】数据表格组件分页字段规范，统一前后端交互字段； - 3、【优化】TAB组件逻辑优化，避免小概率情况下首页加载失败问题； - 4、【修复】Hash路由策略逻辑调整，避免小概率情况下分区分配异常问题；